# nanoCursor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Coder.py  Planner.py  Reviewer.py  Sandbox.py  api_server.py  config.py  llm_engine.py  pyproject.toml  readme.md  requirements.txt  run.py  tools.py  web_ui.py
.github/workflows/: ci.yml
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/context/: AppContext.tsx
frontend/src/pages/: ChatPage.tsx  FileBrowserPage.tsx  MetricsPage.tsx
src/agents/: Coder.py  Planner.py  Reviewer.py  Sandbox.py
src/api/: __init__.py  models.py
src/core/: config.py  context_manager.py  llm_engine.py  logger.py  metrics.py  recovery.py  repo_map.py  routing.py  state.py
src/tools/: file_tools.py
tests/: conftest.py  test_api_server.py  test_context_manager.py  test_file_tools.py  test_metrics.py  test_routing.py  test_state.py
workspace/: README.md  binary_search.py  main.py  metrics.json  requirements.txt  test_main.py  test_quicksort.py
workspace/.snapshots/snapshot_20260405_104447/: metadata.json
workspace/.snapshots/snapshot_20260405_104447/code/: quicksort.py  test_quicksort.py
workspace/.snapshots/snapshot_20260416_090845/: metadata.json
workspace/.snapshots/snapshot_20260429_211240/: metadata.json
workspace/.snapshots/snapshot_20260429_211452/: metadata.json
workspace/.snapshots/snapshot_20260429_211650/: metadata.json
workspace/.snapshots/snapshot_20260429_211709/: metadata.json
workspace/.snapshots/snapshot_20260429_211807/: metadata.json
workspace/.snapshots/snapshot_20260429_211833/: metadata.json
workspace/.snapshots/snapshot_20260429_212043/: metadata.json
workspace/.snapshots/snapshot_20260429_213603/: metadata.json
workspace/.snapshots/snapshot_20260429_213757/: metadata.json
workspace/.snapshots/snapshot_20260429_215019/: metadata.json
workspace/.snapshots/snapshot_20260429_215106/: metadata.json
workspace/.snapshots/snapshot_20260429_215132/: metadata.json
workspace/.snapshots/snapshot_20260429_215209/: metadata.json
workspace/.snapshots/snapshot_20260429_215318/: metadata.json
workspace/.snapshots/snapshot_20260429_220551/: metadata.json
workspace/src/: quick_sort.py
workspace/tests/: test_quick_sort.py
