[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocursor"
version = "2.0.0"
description = "Multi-agent automatic programming framework built on LangGraph and Docker"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langgraph>=1.0.0,<1.1.0",
    "langchain-core>=1.2.0,<1.3.0",
    "langchain-ollama>=1.0.0,<1.1.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-anthropic>=0.3.0,<0.4.0",
    "pydantic>=2.0.0,<3.0.0",
    "tiktoken>=0.9.0,<0.10.0",
    "python-dotenv>=1.0.0,<1.1.0",
    "docker>=7.0.0,<8.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0.0",
]
checkpointer-sqlite = [
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.scripts]
nanocursor = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/*", "api_server", "run"]

# ---------------------------------------------------------------
# Tool configurations
# ---------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src", "api_server", "run"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/node_modules/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 50

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-level imports after path setup (intentional in api_server.py)
    "E501",   # line too long (handled by formatter)
    "RUF001", # Chinese/fullwidth punctuation in string literals (cosmetic)
    "RUF002", # Chinese/fullwidth punctuation in docstrings
    "RUF003", # Chinese/fullwidth punctuation in comments
    "RUF005", # list concatenation style (cosmetic)
    "RUF013", # implicit Optional (existing code)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from (acceptable in FastAPI error handlers)
    "C901",   # too complex
    "SIM102", # use contextlib.suppress
    "SIM105", # use contextlib.suppress (existing code)
    "W291",   # trailing whitespace (existing docstrings)
    "W293",   # blank line whitespace (existing docstrings)
    "F811",   # unused import (existing code)
    "F841",   # unused local variable (existing code)
    "B007",   # unused loop variable (cosmetic)
    "C401",   # set comprehension (cosmetic)
    "SIM117",  # nested with statements (existing code)
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_error_summary = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tiktoken.*", "docker.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
